crates/core-executor/src/tests/sql/functions/snapshots/query_unimplemented_numeric_function.snap
---
source: crates/core-executor/src/tests/sql/functions/unimplemented.rs
description: "\"SELECT ACOS(0.5)\""
---
Err(
    "Error: DataFusion error: This feature is not implemented: Function 'acos' is not implemented yet. Details: https://docs.snowflake.com/en/sql-reference/functions/acos",
)
