crates/core-executor/src/tests/sql/functions/snapshots/query_unimplemented_system_function.snap
---
source: crates/core-executor/src/tests/sql/functions/unimplemented.rs
description: "\"SELECT EXTRACT_SEMANTIC_CATEGORIES('table1')\""
---
Err(
    "Error: DataFusion error: This feature is not implemented: Function 'extract_semantic_categories' is not implemented yet. Details: https://docs.snowflake.com/en/sql-reference/functions/extract_semantic_categories",
)
