crates/core-executor/src/tests/sql/functions/snapshots/query_unimplemented_window_function.snap
---
source: crates/core-executor/src/tests/sql/functions/unimplemented.rs
description: "\"SELECT CUME_DIST() OVER (ORDER BY column1) FROM employee_table\""
---
Err(
    "Error: DataFusion error: This feature is not implemented: Function 'cume_dist' is not implemented yet. Details: https://docs.snowflake.com/en/sql-reference/functions/cume_dist",
)
